tests/ui/ferrocene/compiler-arguments/upper_c_target-feature/upper_c_target-feature_space-empty.rs
//@ check-fail
//@ compile-flags: -C target-feature
//~? ERROR requires a string

fn main() {}

// ferrocene-annotations: um_rustc_C_target_feature
